cluster/deployments/k8s-dashboard/k8s-dashboard-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: k8s-dashboard
  labels:
    name: k8s-dashboard
