cluster/deployments/k8s-dashboard/k8s-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dashboard-ingress
  namespace: default
  labels:
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.myk8s.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: k8s-dashboard-kubernetes-dashboard
            port:
              number: 443
